# aubo_sdk_control

./: CMakeLists.txt  README.md  package.xml
include/: AuboSdkExample.h  example_0.h  example_1.h  example_3.h  example_4.h  example_5.h  example_6.h  example_8.h  example_9.h  example_toolio.h
src/: aubo_sdk_control_main.cpp
src/applicationPoint/: toolioanduserio.cpp  toolioanduserio.h  waypointmonitor.cpp  waypointmonitor.h
src/example/: AuboSdkExample.cpp  example_0.cpp  example_1.cpp  example_3.cpp  example_4.cpp  example_5.cpp  example_6.cpp  example_8.cpp  example_9.cpp  example_toolio.cpp
src/interfaceTest/: interfacetest.cpp
